--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+Flask==0.10.1
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+numpy==1.14.2
+pandas==0.22.0
+PyMySQL==0.8.0
+python-dateutil==2.7.0
+pytz==2018.3
+scikit-learn==0.19.1
+scipy==1.0.0
+six==1.11.0
+sklearn==0.0
+SQLAlchemy==1.2.5
+Werkzeug==0.14.1
